--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Thanks for reporting a bug or suggesting something new! We may or may not get working on it soon :)'
-        pr-message: 'Thanks for adding or fixing something in the project! If we push the request, you get your name on an ingame list of Epic People btw :)'
+        issue-message: 'Thanks for reporting a bug or suggesting something new! We may or may not get working on it soon, life is busy-ish :)'
+        pr-message: "Thanks for adding or fixing something in the project! If we push the request, you get your name on an ingame list of Epic People btw :D (once it's implemented ofc)"
